<resources>
    <string name="app_name">Campus</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">注册</string>
    <string name="action_register">注册</string>
    <string name="account_format_not_correct">账号格式不正确</string>
    <string name="passwd_format_not_correct">密码格式不正确</string>
    <string name="nickname">昵称</string>
    <string name="birthday">出生年月</string>
    <string name="qq">qq</string>
    <string name="phonenumber">电话号码</string>
    <string name="action_done">完成</string>
</resources>
